# BioCatchTraining

./: README.md  package-lock.json  package.json  requirements.txt
backend/: Controller.py  database.py  main.py  model.py  pyproject.toml  sessions.db
front/: package-lock.json  package.json
front/src/: App.tsx  apis.tsx
front/src/components/CommonComponents/: SessionForm.tsx  SessionFormValidation.tsx
front/src/components/CommonComponents/Toggle/: Toggle.tsx
front/src/components/CreateSession/: CreaseSessionValidation.tsx  CreateSession.css  CreateSession.tsx
front/src/components/CreateSession/Toggle/: Toggle.css
front/src/components/DeleteSession/: DeleteSession.tsx
front/src/components/Header/: Header.css  Header.tsx
front/src/components/SessionForm/: SessionForm.tsx  SessionFormUtils.tsx  SessionFormValidation.tsx
front/src/components/SessionForm/CreateSession/: CreateSession.css  CreateSession.tsx
front/src/components/SessionForm/Toggle/: Toggle.tsx
front/src/components/SessionForm/UpdateSession/: EditSession.css  EditSession.tsx
front/src/components/SessionsTable/: SessionsTable.css  SessionsTable.tsx
front/src/components/UpdateSession/: UpdateSession.tsx
