[tool.poetry]
name = "backend"
version = "1.0"
description = "sessions table integrated with mongodb"
authors = ["Shani Yacobovitz <shani.yacobovitz@biocatch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
