[tool.poetry]
name = "backend"
version = "1.0"
description = "sessions table integrated with mongodb"
authors = ["Shani Yacobovitz <shani.yacobovitz@biocatch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pydantic = "^2.5.1"
motor = "^3.3.2"
pymongo = "^4.6.0"

[tool.poetry.dev-dependencies]
python = "^3.9"
requests = "^2.31.0"
pydantic = "^2.5.1"
motor = "^3.3.2"
pymongo = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
